--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,2 +1,29 @@
+# nixpacks.toml  ── Python + full-filter FFmpeg build
+
+###############################################################################
+# 1. Base packages (your original list)                                       #
+###############################################################################
 [phases.setup]
-packages = ["ffmpeg", "python3", "gcc"]
+# These three packages give you a working compiler toolchain and the distro’s
+# minimal ffmpeg, which is fine for the build script below.
+packages = ["ffmpeg", "python3", "gcc", "software-properties-common", "curl", "ca-certificates"]
+
+###############################################################################
+# 2. Install phase – pull the full-feature FFmpeg from Jonathon-f PPA         #
+###############################################################################
+[phases.install]
+cmds = [
+  # Add Ubuntu PPA that ships ffmpeg 6.x with *all* common filters enabled.
+  "add-apt-repository -y ppa:jonathonf/ffmpeg-6",
+  "apt-get update -y",
+  "apt-get install -y ffmpeg",          # overwrites the tiny repo build
+  # Install Python deps
+  "pip install --upgrade pip",
+  "pip install --no-cache-dir -r requirements.txt"
+]
+
+###############################################################################
+# 3. Start command                                                            #
+###############################################################################
+[start]
+cmd = "python app.py"
