--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -3,6 +3,7 @@ packages = [
   "curl",
   "ca-certificates",
   "python3",
+  "python3-pip",
   "gcc"
 ]
 
@@ -10,10 +11,12 @@ packages = [
 cmds = [
   # 1) Download static FFmpeg with every filter enabled
   'curl -L https://johnvansickle.com/ffmpeg/releases/ffmpeg-release-amd64-static.tar.xz -o /tmp/ffmpeg.tar.xz',
-  # 2) Extract only ffmpeg & ffprobe into /usr/local/bin
+
+  # 2) Extract only ffmpeg & ffprobe into /usr/local
   'tar -xJf /tmp/ffmpeg.tar.xz --wildcards --strip-components=1 -C /usr/local "*/ffmpeg" "*/ffprobe"',
   'chmod +x /usr/local/ffmpeg /usr/local/ffprobe',
-  # 3) Python dependencies
-  'pip install --upgrade pip',
-  'pip install --no-cache-dir -r requirements.txt'
+
+  # 3) Install Python dependencies
+  'python3 -m pip install --upgrade pip',
+  'python3 -m pip install --no-cache-dir -r requirements.txt'
 ]
