--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,11 +1,5 @@
 [phases.setup]
-packages = [
-  "curl",
-  "ca-certificates",
-  "python3",
-  "python3-pip",
-  "gcc"
-]
+nixpkgs = ["python311Full", "curl", "gcc", "cacert"]
 
 [phases.install]
 cmds = [
@@ -16,7 +10,7 @@ cmds = [
   'tar -xJf /tmp/ffmpeg.tar.xz --wildcards --strip-components=1 -C /usr/local "*/ffmpeg" "*/ffprobe"',
   'chmod +x /usr/local/ffmpeg /usr/local/ffprobe',
 
-  # 3) Install Python dependencies
-  'python3 -m pip install --upgrade pip',
-  'python3 -m pip install --no-cache-dir -r requirements.txt'
+  # 3) Install Python requirements
+  'python3.11 -m pip install --upgrade pip',
+  'python3.11 -m pip install --no-cache-dir -r requirements.txt'
 ]
